fix verified icon overlapping

--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -254,6 +254,7 @@
 }
 
 .verified_icon {
+  margin-left: 10%;
   float: left !important;
 
   .verified_text {
